nohup.out
Unable to init server: Could not connect: Connection refused
Unable to init server: Could not connect: Connection refused

(test.py:1385): Gdk-CRITICAL **: 16:26:36.515: gdk_cursor_new_for_display: assertion 'GDK_IS_DISPLAY (display)' failed

(test.py:1385): Gdk-CRITICAL **: 16:26:36.521: gdk_cursor_new_for_display: assertion 'GDK_IS_DISPLAY (display)' failed
Traceback (most recent call last):
  File "test.py", line 18, in <module>
    main()
  File "test.py", line 9, in main
    time.sleep(10.0 - ((time.time() - starttime) % 10.0))
NameError: name 'time' is not defined
Traceback (most recent call last):
  File "test.py", line 2, in <module>
    from compiler import Compiler
  File "/home/pi/Documents/plant_disease_class/compiler.py", line 8, in <module>
    import matplotlib.pyplot as plt
  File "/usr/lib/python3/dist-packages/matplotlib/pyplot.py", line 32, in <module>
    import matplotlib.colorbar
  File "/usr/lib/python3/dist-packages/matplotlib/colorbar.py", line 30, in <module>
    import matplotlib.collections as collections
  File "/usr/lib/python3/dist-packages/matplotlib/collections.py", line 19, in <module>
    from . import (_path, artist, cbook, cm, colors as mcolors, docstring,
  File "/usr/lib/python3/dist-packages/matplotlib/cm.py", line 29, in <module>
    from matplotlib._cm import datad
  File "/usr/lib/python3/dist-packages/matplotlib/_cm.py", line 54, in <module>
    _prism_data = {'red': _prism_red, 'green': _prism_green, 'blue': _prism_blue}
KeyboardInterrupt
Unable to init server: Could not connect: Connection refused
Unable to init server: Could not connect: Connection refused

(test.py:1455): Gdk-CRITICAL **: 16:27:57.278: gdk_cursor_new_for_display: assertion 'GDK_IS_DISPLAY (display)' failed

(test.py:1455): Gdk-CRITICAL **: 16:27:57.284: gdk_cursor_new_for_display: assertion 'GDK_IS_DISPLAY (display)' failed
Traceback (most recent call last):
  File "test.py", line 19, in <module>
    main()
  File "test.py", line 7, in main
    starttime = time.time()
NameError: name 'time' is not defined
Unable to init server: Could not connect: Connection refused
Unable to init server: Could not connect: Connection refused

(test.py:1520): Gdk-CRITICAL **: 16:29:03.549: gdk_cursor_new_for_display: assertion 'GDK_IS_DISPLAY (display)' failed

(test.py:1520): Gdk-CRITICAL **: 16:29:03.556: gdk_cursor_new_for_display: assertion 'GDK_IS_DISPLAY (display)' failed
Unable to init server: Could not connect: Connection refused
Unable to init server: Could not connect: Connection refused

(test.py:1587): Gdk-CRITICAL **: 16:30:19.516: gdk_cursor_new_for_display: assertion 'GDK_IS_DISPLAY (display)' failed

(test.py:1587): Gdk-CRITICAL **: 16:30:19.522: gdk_cursor_new_for_display: assertion 'GDK_IS_DISPLAY (display)' failed
  File "test.py", line 10
    cam.take_picture()
      ^
IndentationError: expected an indented block
Unable to init server: Could not connect: Connection refused
Unable to init server: Could not connect: Connection refused

(test.py:1257): Gdk-CRITICAL **: 17:05:45.543: gdk_cursor_new_for_display: assertion 'GDK_IS_DISPLAY (display)' failed

(test.py:1257): Gdk-CRITICAL **: 17:05:45.550: gdk_cursor_new_for_display: assertion 'GDK_IS_DISPLAY (display)' failed
Traceback (most recent call last):
  File "test.py", line 3, in <module>
    from compiler import Compiler
  File "/home/pi/Documents/plant_disease_class/compiler.py", line 75
    weightpath = f"output/best_checkpoint_weight.hdf5"
                                                     ^
SyntaxError: invalid syntax
Unable to init server: Could not connect: Connection refused
Unable to init server: Could not connect: Connection refused

(test.py:1312): Gdk-CRITICAL **: 17:30:31.649: gdk_cursor_new_for_display: assertion 'GDK_IS_DISPLAY (display)' failed

(test.py:1312): Gdk-CRITICAL **: 17:30:31.655: gdk_cursor_new_for_display: assertion 'GDK_IS_DISPLAY (display)' failed
